@@ -49,7 +49,6 @@ import javax.inject.Provider;
 import java.io.Closeable;
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
@@ -286,16 +285,21 @@ public class SessionState {
 
         final ExportObject<T> result;
 
-        // If this a non-export or server side export, then it must already exist or else is a user error.
-        if (exportId <= NON_EXPORT_ID) {
+        if (exportId < NON_EXPORT_ID) {
+            // If this a server-side export then it must already exist or else is a user error.
             result = (ExportObject<T>) exportMap.get(exportId);
 
             if (result == null) {
                 throw Exceptions.statusRuntimeException(Code.FAILED_PRECONDITION,
                         "Export id " + exportId + " does not exist and cannot be used out-of-order!");
             }
-        } else {
+        } else if (exportId > NON_EXPORT_ID) {
+            // If this a client-side export we'll allow an out-of-order request by creating a new export object.
             result = (ExportObject<T>) exportMap.putIfAbsent(exportId, EXPORT_OBJECT_VALUE_FACTORY);
+        } else {
+            // If this is a non-export request, then it is a user error.
+            throw Exceptions.statusRuntimeException(Code.INVALID_ARGUMENT,
+                    "Export id " + exportId + " refers to a non-export and cannot be requested!");
         }
 
         return result;
@@ -708,15 +712,14 @@ public class SessionState {
             if (session != null && session.isExpired()) {
                 throw Exceptions.statusRuntimeException(Code.UNAUTHENTICATED, "session has expired");
             }
-
+            final T localResult = result;
             // Note: an export may be released while still being a dependency of queued work; so let's make sure we're
             // still valid
-            if (result == null) {
+            if (localResult == null) {
                 throw new IllegalStateException(
                         "Dependent export '" + exportId + "' is null and in state " + state.name());
             }
-
-            return result;
+            return localResult;
         }
 
         /**
@@ -1266,7 +1269,7 @@ public class SessionState {
          * @return this builder
          */
         public ExportBuilder<T> require(final ExportObject<?>... dependencies) {
-            export.setDependencies(Arrays.asList(dependencies));
+            export.setDependencies(List.of(dependencies));
             return this;
         }
 
@@ -1277,8 +1280,8 @@ public class SessionState {
          * @param dependencies the parent dependencies
          * @return this builder
          */
-        public <S> ExportBuilder<T> require(final List<ExportObject<S>> dependencies) {
-            export.setDependencies(Collections.unmodifiableList(dependencies));
+        public ExportBuilder<T> require(final List<? extends ExportObject<?>> dependencies) {
+            export.setDependencies(List.copyOf(dependencies));
             return this;
         }
 
@@ -1320,8 +1323,13 @@ public class SessionState {
                 final String dependentStr = dependentExportId == null ? ""
                         : (" (related parent export id: " + dependentExportId + ")");
                 if (cause == null) {
-                    errorHandler.onError(Exceptions.statusRuntimeException(Code.FAILED_PRECONDITION,
-                            "Export in state " + resultState + dependentStr));
+                    if (resultState == ExportNotification.State.CANCELLED) {
+                        errorHandler.onError(Exceptions.statusRuntimeException(Code.CANCELLED,
+                                "Export is cancelled" + dependentStr));
+                    } else {
+                        errorHandler.onError(Exceptions.statusRuntimeException(Code.FAILED_PRECONDITION,
+                                "Export in state " + resultState + dependentStr));
+                    }
                 } else {
                     errorHandler.onError(Exceptions.statusRuntimeException(Code.FAILED_PRECONDITION,
                             "Details Logged w/ID '" + errorContext + "'" + dependentStr));
